<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page2">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dbsadv" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="Select Issues :-"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="issue1"
                android:text="@string/issue1_button"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="issue2"
                android:text="@string/issue2_button"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="issue3"
                android:text="@string/issue3_button"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="issue4"
                android:text="@string/issue4_button"
                android:textStyle="bold|italic"
                tools:ignore="TextSizeCheck" />

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="177dp"
                android:layout_marginTop="180dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="For Going Back To Login Page ->    "
                    android:textAlignment="textEnd"
                    android:textColor="#00FFFF"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="back"
                    android:text="@string/back_button"
                    android:textStyle="bold|italic" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>